--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
 DATABASE_URL=postgres://user:password@localhost:5432/my-poll
+
+# Discord Config
+POLL_DISCORD_KEY=YOUR_DISCORD_KEY
+POLL_DISCORD_ID=YOUR_DISCORD_ID
+POLL_DISCORD_OAUTH=YOUR_DISCOD_OAUTH_URL
+
+# Github Config
+POLL_GITHUB_KEY=YOUR_GITHUB_KEY
+POLL_GITHUB_ID=YOUR_GITHUB_ID
