No commit message.

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@ DATABASE_URL=postgres://user:password@localhost:5432/my-poll
 
 # Discord Config
 POLL_DISCORD_KEY=YOUR_DISCORD_KEY
-POLL_DISCORD_ID=YOUR_DISCORD_ID
-POLL_DISCORD_OAUTH=YOUR_DISCOD_OAUTH_URL
+NEXT_PUBLIC_POLL_DISCORD_ID=YOUR_DISCORD_ID
+NEXT_PUBLIC_POLL_DISCORD_OAUTH=https://discord.com/api/oauth2/authorize?client_id=YOUR_CLIENT_ID&redirect_uri=YOUR_AUTH_URL&response_type=code&scope=email%20identify
 
 # Github Config
 POLL_GITHUB_KEY=YOUR_GITHUB_KEY
-POLL_GITHUB_ID=YOUR_GITHUB_ID
+NEXT_PUBLIC_POLL_GITHUB_ID=YOUR_GITHUB_ID
