--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ DATABASE_URL=postgres://user:password@localhost:5432/my-poll
 
 # Discord Config
 POLL_DISCORD_KEY=YOUR_DISCORD_KEY
+POLL_DISCORD_BOT_KEY=YOUR_DISCORD_BOT_KEY # This is only used for updating user profiles
 NEXT_PUBLIC_POLL_DISCORD_ID=YOUR_DISCORD_ID
 NEXT_PUBLIC_POLL_DISCORD_OAUTH=https://discord.com/api/oauth2/authorize?client_id=YOUR_CLIENT_ID&redirect_uri=YOUR_AUTH_URL&response_type=code&scope=email%20identify
 
